--- a/main.html
+++ b/main.html
@@ -8,14 +8,14 @@
 <body>
 
   <div class="player">
-    <video class="viewer" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+    <video class="player__video viewer" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
 
     <div class="player__controls">
       <button class="player__button toggle" title="Toggle Play">►</button>
       <input type="range" name="volume" class="player__slider" min="0" max="1" step="0.05">
       <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1">
-      <button data-skip="-10">« 10s</button>
-      <button data-skip="25">25s »</button>
+      <button class="rewind" data-skip="-10">« 10s</button>
+      <button class="forward" data-skip="25">25s »</button>
       <div class="progress">
         <div class="progress__filled"></div>
       </div>
